--- a/frontendjenkinsfile/Jenkinsfile
+++ b/frontendjenkinsfile/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         stage("Docker Image Build") {
             steps {
                 script {
-                    dir('backend') {
+                    dir('client') {
                         sh 'docker system prune -f'
                         sh 'docker container prune -f'
                         sh 'docker build -t backend .'
