--- a/frontendjenkinsfile/Jenkinsfile
+++ b/frontendjenkinsfile/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
                 script {
                     sh '''
                     aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 324037320561.dkr.ecr.ap-south-1.amazonaws.com
-                    docker tag frontend:latest 324037320561.dkr.ecr.ap-south-1.amazonaws.com/frontend:${BUILD_NUMBER}
+                    docker tag frontend 324037320561.dkr.ecr.ap-south-1.amazonaws.com/frontend:${BUILD_NUMBER}
                     docker push 324037320561.dkr.ecr.ap-south-1.amazonaws.com/frontend:${BUILD_NUMBER}
                     '''
                 }
