--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -47,3 +47,18 @@ spec:
               key: db_password
         - name: PORT
           value: "3306"  # Adjust if necessary
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+      #nodePort: 31005  # Optional: Specify a #nodePort if you want a fixed port
+  selector:
+    app: backend  # Ensure this matches the labels in the Deployment
+  type: LoadBalancer
