--- a/backendjenkinsfile/Jenkinsfile
+++ b/backendjenkinsfile/Jenkinsfile
@@ -7,12 +7,14 @@ pipeline {
                 cleanWs()
             }
         }
+
         stage('Checkout from Git') {
             steps {
                 git branch: 'main', url: 'https://github.com/simonxox/project2025.git'
             }
         }
-        stage("Docker Image Build") {
+
+        stage('Docker Image Build') {
             steps {
                 script {
                     dir('backend') {
@@ -23,7 +25,8 @@ pipeline {
                 }
             }
         }
-        stage("ECR Image Pushing") {
+
+        stage('ECR Image Pushing') {
             steps {
                 script {
                     sh '''
@@ -34,24 +37,28 @@ pipeline {
                 }
             }
         }
+
         stage('Update Deployment file') {
-    environment {
-        GIT_REPO_NAME = "project2025"
-        GIT_USER_NAME = "simonxox"
-    }
-    steps {
-        dir('kubernetes-files') {
-            withCredentials([string(credentialsId: 'my-git-pattoken', variable: 'git_token')]) {
-                sh '''
-                    git config user.email "simonchinnu13@gmail.com"
-                    git config user.name "simonxox"
-                    echo "Build Number: $BUILD_NUMBER"
-                    sed -i "s#image:.*#image: 324037320561.dkr.ecr.ap-south-1.amazonaws.com/backend:$BUILD_NUMBER#" backend-deployment.yaml
-                    git add .
-                    git commit -m "Update deployment Image to version $BUILD_NUMBER"
-                    git push https://${git_token}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
+            environment {
+                GIT_REPO_NAME = "project2025"
+                GIT_USER_NAME = "simonxox"
             }
-        }
-    }
-}
+            steps {
+                dir('kubernetes-files') {
+                    withCredentials([string(credentialsId: 'my-git-pattoken', variable: 'git_token')]) {
+                        sh '''
+                            git config user.email "simonchinnu13@gmail.com"
+                            git config user.name "simonxox"
+                            echo "Build Number: $BUILD_NUMBER"
+                            sed -i "s#image:.*#image: 324037320561.dkr.ecr.ap-south-1.amazonaws.com/backend:$BUILD_NUMBER#" backend-deployment.yaml
+                            git add .
+                            git commit -m "Update deployment Image to version $BUILD_NUMBER"
+                            git push https://${git_token}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                        '''
+                    }
+                }
+            }
+        } // closing the stage
+
+    } // closing stages
+} // closing pipeline
