--- a/backendjenkinsfile/Jenkinsfile
+++ b/backendjenkinsfile/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
 
         stage('Checkout from Git') {
             steps {
-                git branch: 'main', url: 'https://github.com/simonxox/project2025.git'
+                git branch: 'main', url: "https://github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git"
             }
         }
 
@@ -53,7 +53,7 @@ pipeline {
                             echo "Build Number: $BUILD_NUMBER"
                             sed -i "s#image:.*#image: 324037320561.dkr.ecr.ap-south-1.amazonaws.com/backend:$BUILD_NUMBER#" backend-deployment.yaml
                             git add backend-deployment.yaml
-                            git commit -m "Update deployment Image to version $BUILD_NUMBER"
+                            git commit -m "Update deployment Image to version $BUILD_NUMBER" || echo "No changes to commit"
                             git push https://${git_token}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                         '''
                     }
@@ -66,8 +66,12 @@ pipeline {
                 dir('kubernetes-files') {
                     withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG')]) {
                         sh '''
-                            kubectl apply -f backend-deployment.yaml
-                            kubectl rollout status deployment/backend
+                            if command -v kubectl >/dev/null 2>&1; then
+                                kubectl apply -f backend-deployment.yaml
+                                kubectl rollout status deployment/backend
+                            else
+                                echo "kubectl not found. Skipping deployment."
+                            fi
                         '''
                     }
                 }
