--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=book.rds.com
+DB_HOST=database-1.cvmgam6ckuuz.ap-south-1.rds.amazonaws.com
 DB_USERNAME=admin
 DB_PASSWORD="simon123"
 PORT=3306
